--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Elijah Ally",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
